# 2DGame

./: .gitignore  CMakeLists.txt  Enemy.cpp  Enemy.h  Global.cpp  Global.h  GrowingPlayer.cpp  GrowingPlayer.h  Main.cpp  Moveable.cpp  Moveable.h  Player.cpp  Player.h  README.md  SoundManager.cpp  SoundManager.h  SplitterEnemy.cpp  SplitterEnemy.h  View.cpp  View.h  World.cpp  World.h
Utility/: AverageCollector.cpp  AverageCollector.h  Timer.cpp  Timer.h
